6.2.0.6 (#1671)
* bump game-version

* [ci skip] Automatically merge Crowdin translations

* Ship sources jar with jars

* [ci skip] Automatically merge Crowdin translations

* [ci skip] Automatically merge Crowdin translations

* [ci skip] Automatically merge Crowdin translations

* [ci skip] Automatically merge Crowdin translations

* [ci skip] Automatically merge Crowdin translations

* [ci skip] Automatically merge Crowdin translations

* [ci skip] Automatically merge Crowdin translations

* Try to fix #1616

* fix vdi not working on 1.21

* bump version

* update IF version

* Fix item interact/put

* fix GeoUtil resources leak

* Optimize the workflow and build speed

* fix git

* Disable /qs history command

* [ci skip]update template

Even in the event that if possible it should not be required

* Carry over compilation errors from Folia Branch.

* Add TNML to depends, temporarily disable shop history.

* Adjust git maven, fix ci.

* Adjust git maven, fix ci.

* chore: fix startup & drop placeholderapi impl (#1644)

Co-authored-by: bridge <ctibeheerder@gmail.com>

* Fix price restrictions not detecting enchantments in enchanted books (#1650)

* use new documents link&update repo link (#1652)

* Bump com.willfp:eco from 6.69.2 to 6.71.6 (#1654)

Bumps com.willfp:eco from 6.69.2 to 6.71.6.

---
updated-dependencies:
- dependency-name: com.willfp:eco
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump com.palmergames.bukkit.towny:towny from 0.100.2.7 to 0.100.3.7 (#1653)

Bumps [com.palmergames.bukkit.towny:towny](https://github.com/TownyAdvanced/Towny) from 0.100.2.7 to 0.100.3.7.
- [Release notes](https://github.com/TownyAdvanced/Towny/releases)
- [Commits](https://github.com/TownyAdvanced/Towny/compare/0.100.2